# mutual-gaze-detection

./: README.md
classifier-demo/: CMakeLists.txt  requirements.txt
classifier-demo-offline/: config.py  demo.py  requirements.txt  run_openpose.py  utilities.py
classifier-demo-offline/images/openpose_json/: 00000010_keypoints.json  00000021_keypoints.json
classifier-demo/app/: CMakeLists.txt
classifier-demo/app/config/: classifier_conf.ini  yarpOpenpose.ini
classifier-demo/app/scripts/: mutual-gaze-classifier-icub.xml  mutual-gaze-classifier-realsense.xml
classifier-demo/src/: CMakeLists.txt  classifier.py  classifier.py.in
classifier-demo/src/functions/: config.py  model_svm_icubCamera.pkl  model_svm_realsense.pkl  utilities.py
dataset-collection/: requirements.txt
dataset-collection/datasets/: eyecontact_annotations_icubCamera.txt  eyecontact_annotations_realsense.txt  feats_dataset_eyecontact_icubCamera.pkl  feats_dataset_eyecontact_realsense.pkl
dataset-collection/datasets-preprocessing/icubCamera/p00/eyecontact_data_openpose/: 00000000_keypoints.json  00000001_keypoints.json  00000020_keypoints.json  00000021_keypoints.json
dataset-collection/datasets-preprocessing/realsense/p00/eyecontact_data_openpose/: 00000011_keypoints.json  00000020_keypoints.json
dataset-collection/src/: config.py  create_annotation_file.py  create_python_dataset.py  dataset_eye_contact.py  openpose_utilities.py  run_openpose.py
docker/: Dockerfile
